# rstsr-showcase-dft-grids

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  katex-header.html
benches/: pen-bench.ipynb  pen_bench.rs
benches/util/: mod.rs
pynimatmul/: __init__.py  flags.py  nimatmul.py  pure_eval_rho.py  pure_xcpot.py
pynimatmul/test/: __init__.py  test_ch2.py  test_h2o.py
src/: error.rs  flags.rs  lib.rs  pure_numint_matmul.rs  xcpot_dm_naive.rs  xcpot_fock_naive.rs
src/numint_matmul/: buffer_pool.rs  impls.rs  mod.rs  nimatmul.rs  pure_eval_rho.rs  pure_eval_rho_naive.rs  pure_eval_rho_parenh.rs  pure_xcpot.rs  pure_xcpot_naive.rs  pure_xcpot_parenh.rs  structs.rs
src/numint_matmul/docs/: cn-dft-api-concepts.md  get_rho_from_dm_with_output.md  get_rho_from_homogeneous_braket_with_output.md  get_rho_from_one_bra_mult_ket_with_output.md  mod.md
src/xceff/: libxc-eval-eff.md  libxc-xcfun-trans.md  libxc_wrap.rs  mod.rs  xc_deriv.rs
tests/: ch2-test.ipynb  gen-grids.ipynb  h2o-test.ipynb  libxc-xcfun-trans.ipynb  pen-bench.rs  pen_bench.rs  read_npz.rs  test_ch2_eval_rho.rs  test_ch2_libxc_wrap.rs  test_ch2_xcpot.rs  test_eval_rho.rs  test_h2o_eval_rho.rs  test_h2o_libxc_wrap.rs  test_h2o_xcpot.rs  test_pure_eval_rho.rs  test_util.rs
